# ccef_connections

./: LICENSE  README.md  pyproject.toml
src/ccef_connections/: __init__.py  config.py  exceptions.py
src/ccef_connections/connectors/: __init__.py  action_builder.py  action_network.py  airtable.py  bigquery.py  geocodio.py  helpscout.py  openai.py  ptv.py  roi_crm.py  sheets.py  sheets_writer.py  zoom.py
src/ccef_connections/core/: __init__.py  base.py  credentials.py  retry.py
tests/: test_action_builder.py  test_action_network.py  test_airtable.py  test_bigquery.py  test_config.py  test_core.py  test_geocodio.py  test_helpscout.py  test_openai.py  test_roi_crm.py  test_sheets.py  test_zoom.py
